# CppTest

./: .gitignore  CMakeLists.txt  Execute.h  HolaMundo.cpp  ILevelCpp.h  LevelFactory.h  Main.cpp  QuestionAnswer.h
AdvancedCpp/: AdvancedCpp.cpp  AdvancedCpp.h
BasicCpp/: BasicCpp.cpp  BasicCpp.h
CppBasic/: BasicCpp.cpp
CppBasic/Headers/: BasicCpp.h
Enums/: Levels.h
ExpertCpp/: ExpertCpp.h
Factory/: LevelFactory.cpp  LevelFactory.h
Levels/AdvancedCpp/: AdvancedCpp.h
Levels/BasicCpp/: BasicCpp.h
Levels/ExpertCpp/: ExpertCpp.cpp  ExpertCpp.h
Levels/Interfaces/: ILevelCpp.h
Levels/OOP/: Oop.cpp  Oop.h
Levels/Patterns_Idioms/: PatternsIdioms.cpp  PatternsIdioms.h
Levels/Testing/: TestingLevel.h
OOP/: Oop.h
Patterns_Idioms/: PatternsIdioms.h
Testing/: TestingLevel.cpp  TestingLevel.h
